<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin_larger"
    android:paddingRight="@dimen/activity_horizontal_margin_larger" >

    <RelativeLayout style="@style/LargeTitleAlt" >

        <TextView
            style="@style/LargeTitleLabelAlt"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_offline"
            android:textColor="@color/ian_cinnabar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.5" >

        <TextView
            android:id="@+id/password_reset_conf"
            style="@style/Title"
            android:layout_marginBottom="@dimen/default_view_spacing"
            android:layout_marginTop="@dimen/default_view_spacing"
            android:gravity="center_horizontal"
            android:text="@string/lbl_offline_subtitle" />

        <TextView
            style="@style/Label"
            android:layout_below="@id/password_reset_conf"
            android:text="@string/lbl_offline_body" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.5" >

        <Button
            style="@style/ButtonLight"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:onClick="finish"
            android:text="@string/OK" />
    </RelativeLayout>

</LinearLayout>