<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/title"
            style="@style/Title"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_view_spacing"
            android:text="@string/lbl_enter_email" />

        <EditText
            android:id="@+id/input_email"
            style="@style/Input"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_view_spacing"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/ButtonLight"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_view_spacing"
            android:text="@string/btn_reset_password" />

        <TextView
            android:id="@+id/link_sign_in"
            style="@style/Link"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/lbl_remember_password" />
    </LinearLayout>

</LinearLayout>